<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stromtracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_geraete"
        android:name="com.example.stromtracker.ui.geraete.GeraeteFragment"
        android:label="@string/menu_geraete"
        tools:layout="@layout/fragment_geraete" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.stromtracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_haushalt"
        android:name="com.example.stromtracker.ui.haushalt.HaushaltFragment"
        android:label="@string/menu_haushalt"
        tools:layout="@layout/fragment_haushalt" />
</navigation>