<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".ui.haushalt.haushaltErstellen.HaushaltErstellenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_haushalt_erstellen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/haushaltsname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_text_haushalt_erstellen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/haushaltedithint_name"
            android:autofillHints="@string/haushaltedithint_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_name" />

        <TextView
            android:id="@+id/text_view_haushalt_erstellen_strompreis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/haushaltstrompreis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_name" />

        <EditText
            android:id="@+id/edit_text_haushalt_erstellen_strompreis"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/haushaltedithint_strompreis"
            android:autofillHints="@string/haushaltedithint_strompreis"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_strompreis" />

        <TextView
            android:id="@+id/text_view_haushalt_erstellen_anzahl_personen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/haushaltspersonen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_strompreis" />

        <EditText
            android:id="@+id/edit_text_haushalt_erstellen_anzahl_personen"
            android:layout_width="161dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/haushaltedithint_personen"
            android:autofillHints="@string/haushaltedithint_personen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_anzahl_personen" />

        <TextView
            android:id="@+id/text_view_haushalt_erstellen_zaehlerstand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/haushaltzaehlerstand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_anzahl_personen" />

        <EditText
            android:id="@+id/edit_text_haushalt_erstellen_zaehlerstand"
            android:layout_width="167dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/haushaltedithint_stand"
            android:autofillHints="@string/haushaltedithint_stand"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_zaehlerstand" />
        <TextView
            android:id="@+id/text_view_haushalt_erstellen_datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/haushaltdatum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_zaehlerstand" />

        <EditText
            android:id="@+id/edit_text_haushalt_erstellen_datum"
            android:layout_width="169dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/haushaltedithint_datum"
            android:autofillHints="@string/haushaltedithint_datum"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_datum" />

        <TextView
            android:id="@+id/text_view_haushalt_erstellen_oekostrom"
            android:layout_width="81dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/haushaltökomix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_datum" />

        <CheckBox
            android:id="@+id/check_box_haushalt_erstellen_oekostrom"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/haushaltedithint_strommix"
            android:hint="@string/haushaltedithint_strommix"
            app:layout_constraintStart_toEndOf="@+id/text_view_haushalt_erstellen_oekostrom"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_haushalt_erstellen_datum" />

        <Button
            android:id="@+id/button_haushalt_erstellen_speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_speichern"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_oekostrom" />

        <Button
            android:id="@+id/button_haushalt_erstellen_abbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorDarkGreen"
            android:text="@string/button_abbrechen"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_haushalt_erstellen_oekostrom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>