<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/kategorie_edit_textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/kategorie_edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kategorie_edit_editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_kategorie_input"
        app:layout_constraintStart_toStartOf="@+id/kategorie_edit_textName"
        app:layout_constraintTop_toBottomOf="@+id/kategorie_edit_textName"
        android:inputType="text"
        android:autofillHints="@string/hint_kategorie_input" />

    <TextView
        android:id="@+id/kategorie_edit_textIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/kategorie_edit_icon"
        app:layout_constraintStart_toStartOf="@+id/kategorie_edit_editName"
        app:layout_constraintTop_toBottomOf="@+id/kategorie_edit_editName" />

    <Button
        android:id="@+id/kategorie_edit_button_speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_speichern"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/kategorie_edit_button_abbrechen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorDarkGreen"
        android:text="@string/button_abbrechen"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/kategorie_edit_button_loeschen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorDarkRed"
        android:text="@string/button_loeschen"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kategorie_edit_button_speichern"
        app:layout_constraintStart_toEndOf="@+id/kategorie_edit_button_abbrechen" />

    <Spinner
        android:id="@+id/kategorie_edit_icon_spinner"
        android:layout_width="@dimen/spinner_icon_width"
        android:layout_height="@dimen/spinner_icon_height"
        android:layout_marginTop="8dp"
        android:dropDownWidth="@dimen/spinner_icon_dropdown_width"
        app:layout_constraintStart_toStartOf="@+id/kategorie_edit_textIcon"
        app:layout_constraintTop_toBottomOf="@+id/kategorie_edit_textIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>